# opencv-helloworld

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_opencv.sh
