cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
set(OpenCV_DIR cvbuild)
find_package( OpenCV REQUIRED )
message("========================================================")
message("OpenCV_INCLUDE_DIRS: " ${OpenCV_INCLUDE_DIRS})
message("========================================================")
include_directories(opencv/include)
add_executable( video_capture video_capture.cpp )
target_link_libraries( video_capture ${OpenCV_LIBS} )